fixed capture box vertical align issue

--- a/Style.css
+++ b/Style.css
@@ -23,3 +23,6 @@ body{
 	background-color:grey;
 	box-shadow:0 2px 0 0 #444444, 0 2px 2px 0 #111111AA, 0 2px 4px 0 #111111AA;
 }
+.ValidMove{
+	border-color:#ffd11aff;
+}
